--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
           
           <div class="flex">
           <div class="row">
-            <form name="contact" netlify="true" class="col s12">
+            <form name="contact" netlify class="col s12">
               <input type="hidden" name="form-name" value="contact" />
               <div class="row">
                 <div class="input-field col s12">
