--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
     <div class="footer">
         FOOTER
     </div>
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D3VBGZG859"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-D3VBGZG859');
+</script>
 </body>
+
 </html>
