--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
        
     <div class="img1">
-        <p class="paragraph"><b>Quick Water Supply</b></p>
+        <p class="paragraph"><b>Quik Water Supply</b></p>
     <div class=text>
     <h6>Let us supply you with clean water, your location is not a barrier <br>
         We want to ensure you get clean water for all your various needs as fast as possible <br>
