--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <header>
         <nav>
+            <h1>H20</h1>
+
             <ul>
-                <a href="index.html"><li>Home</li></a>
-                <a href="about.html"><li>About</li></a>
-                <a href="contact.html"><li>Contact</li></a>
-                <a href="order.html"><li>Order</li></a>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="order.html">Order</a></li>
             </ul>
         </nav>
-    </header>
-       
+        
     <div class="img1">
         <p class="paragraph"><b>Quick Water Supply</b></p>
     <div class=text>
