--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="stylesheet.css">
+
 </head>
 <body>
           
@@ -27,6 +28,7 @@
     
         <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-D3VBGZG859"></script>
+<script src="qrcodelibrary.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function(){
     var fileSelector = document.querySelector("input[type=file]");
