--- a/about.html
+++ b/about.html
@@ -28,7 +28,6 @@
     
         <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-D3VBGZG859"></script>
-<script src="qrcodelibrary.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function(){
     var fileSelector = document.querySelector("input[type=file]");
@@ -38,7 +37,6 @@
         var reader = new FileReader();
 
         reader.addEventListener("load", function(e){
-            qrcode.decode(e.target.result);
             qr.style.display = "block"
             qr.src = e.target.result;
         });
@@ -79,7 +77,7 @@ function getSnapshot(){
     var ctx = canvas.getContext("2d");
 
     ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-    qrcode.decode(canvas.toDataURL('image/jpeg'));
+    return canvas.toDataURL('image/jpeg');
 }
 </script>
 </body>
