--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
 <h2>Take a photo</h2>
 
-<input type="file" accept="image/*" capture>
+<input type="file" accept="image/*" capture="user">
 
 <h2>Scan with live streaming</h2>
 
